src/core-crm/objects/hed__Course__c/fields/Module_Type__c.field-meta.xml
<CustomField>
    <fullName>Module_Type__c</fullName>
    <label>Module Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Learning</fullName>
            </value>
            <value>
                <fullName>Assessment</fullName>
            </value>
            <value>
                <fullName>Learning and Assessment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>