src/core-crm/objects/hed__Course__c/fields/More_Details__c.field-meta.xml
<CustomField>
    <fullName>More_Details__c</fullName>
    <label>More Details</label>
    <length>4000</length>
    <type>Html</type>
</CustomField>