src/core-crm/objects/hed__Course__c/fields/Multi_Rater_Tools__c.field-meta.xml
<CustomField>
    <fullName>Multi_Rater_Tools__c</fullName>
    <label>Multi-Rater Tools</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disc 363 for Leaders</fullName>
            </value>
            <value>
                <fullName>TLC Leadership Circle Profile</fullName>
            </value>
            <value>
                <fullName>TLC Manager Edition</fullName>
            </value>
            <value>
                <fullName>TLC Leadership Check-In</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>