src/core-crm/objects/hed__Course__c/fields/Name_Left_Indented__c.field-meta.xml
<CustomField>
    <fullName>Name_Left_Indented__c</fullName>
    <label>Name(Left Indented)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>