src/core-crm/objects/hed__Course__c/fields/Name_Right_Indented__c.field-meta.xml
<CustomField>
    <fullName>Name_Right_Indented__c</fullName>
    <label>Name(Right Indented)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>