src/core-crm/objects/hed__Course__c/fields/No_Hours_Per_Session__c.field-meta.xml
<CustomField>
    <fullName>No_Hours_Per_Session__c</fullName>
    <label>No. Hours Per Session</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>