src/core-crm/objects/hed__Course__c/fields/No_Of_Coaching_Sessions__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Coaching_Sessions__c</fullName>
    <label>No. Of Coaching Sessions</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>