src/core-crm/objects/hed__Course__c/fields/No_of_Groups__c.field-meta.xml
<CustomField>
    <fullName>No_of_Groups__c</fullName>
    <label>No. of Groups</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>