src/core-crm/objects/hed__Course__c/fields/Number_Of_Groups__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Groups__c</fullName>
    <label>Number Of Groups</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>