src/core-crm/objects/hed__Course__c/fields/Number_of_Sessions_Per_Group__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Sessions_Per_Group__c</fullName>
    <label>Number of Sessions Per Group</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>