src/core-crm/objects/hed__Course__c/fields/Number_of_Triads__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Triads__c</fullName>
    <label>Number of Triads</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>