src/core-crm/objects/hed__Course__c/fields/OPE_Design_Complete__c.field-meta.xml
<CustomField>
    <fullName>OPE_Design_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in flow to check if fields for OPE design is complete.</description>
    <label>OPE Design Complete</label>
    <type>Checkbox</type>
</CustomField>