src/core-crm/objects/hed__Course__c/fields/Other_Content_Delivery_Location__c.field-meta.xml
<CustomField>
    <fullName>Other_Content_Delivery_Location__c</fullName>
    <label>Other Content Delivery Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>