src/core-crm/objects/hed__Course__c/fields/Other_Content_Delivery_Locationv2__c.field-meta.xml
<CustomField>
    <fullName>Other_Content_Delivery_Locationv2__c</fullName>
    <label>Other Content Delivery Location</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>