src/core-crm/objects/hed__Course__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>