src/core-crm/objects/hed__Course__c/fields/Outcomev2__c.field-meta.xml
<CustomField>
    <fullName>Outcomev2__c</fullName>
    <label>Outcomev2</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>