src/core-crm/objects/hed__Course__c/fields/Overview_Website__c.field-meta.xml
<CustomField>
    <fullName>Overview_Website__c</fullName>
    <inlineHelpText>The Overview should briefly address (approx. 950 characters): 
·       What the event is about?
·       Why the event is important and relevant?
·       If the event is linked to a course, briefly explain how it contributes?</inlineHelpText>
    <label>Overview for the website</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>