src/core-crm/objects/hed__Course__c/fields/Overviewv2__c.field-meta.xml
<CustomField>
    <fullName>Overviewv2__c</fullName>
    <inlineHelpText>The Overview should briefly address (approx. 950 characters):
·       what the event is about,
·       why the event is important and relevant 
·       if the event is linked to a course, briefly explain how it contributes</inlineHelpText>
    <label>Overview</label>
    <length>75000</length>
    <type>LongTextArea</type>
</CustomField>