src/core-crm/objects/hed__Course__c/fields/Owning_School_Discipline_Area__c.field-meta.xml
<CustomField>
    <fullName>Owning_School_Discipline_Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owning School / Discipline / Area</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Courses (Owning School / Discipline / Area)</relationshipLabel>
    <relationshipName>Courses</relationshipName>
    <type>Lookup</type>
</CustomField>