src/core-crm/objects/hed__Course__c/fields/Participants__c.field-meta.xml
<CustomField>
    <fullName>Participants__c</fullName>
    <inlineHelpText>Who should participate?</inlineHelpText>
    <label>Participants</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>