src/core-crm/objects/hed__Course__c/fields/Partner_Logo__c.field-meta.xml
<CustomField>
    <fullName>Partner_Logo__c</fullName>
    <label>Partner Logo</label>
    <length>256</length>
    <type>Html</type>
</CustomField>