src/core-crm/objects/hed__Course__c/fields/Payment_Options__c.field-meta.xml
<CustomField>
    <fullName>Payment_Options__c</fullName>
    <label>Payment Options</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pay Now - Credit Card</fullName>
            </value>
            <value>
                <fullName>Pay Now - PayPal</fullName>
            </value>
            <value>
                <fullName>Pay Later - Invoice</fullName>
            </value>
            <value>
                <fullName>Advantage - Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>