src/core-crm/objects/hed__Course__c/fields/Position_Left_Indented__c.field-meta.xml
<CustomField>
    <fullName>Position_Left_Indented__c</fullName>
    <label>Position(Left Indented)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>