src/core-crm/objects/hed__Course__c/fields/Position_Right_Indented__c.field-meta.xml
<CustomField>
    <fullName>Position_Right_Indented__c</fullName>
    <label>Position(Right Indented)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>