src/core-crm/objects/hed__Course__c/fields/Previously_Developed_Content__c.field-meta.xml
<CustomField>
    <fullName>Previously_Developed_Content__c</fullName>
    <label>Previously Developed Content</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>