src/core-crm/objects/hed__Course__c/fields/Primary_Delivery_Platform__c.field-meta.xml
<CustomField>
    <fullName>Primary_Delivery_Platform__c</fullName>
    <label>Primary Delivery Platform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blackboard</fullName>
            </value>
            <value>
                <fullName>Blackboard Engage (Custom Program)</fullName>
            </value>
            <value>
                <fullName>Canvas (QUT Online)</fullName>
            </value>
            <value>
                <fullName>FutureLearn</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>