src/core-crm/objects/hed__Course__c/fields/ProductRequestID__c.field-meta.xml
<CustomField>
    <fullName>ProductRequestID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Request</label>
    <referenceTo>Product_Request__c</referenceTo>
    <relationshipLabel>Courses</relationshipLabel>
    <relationshipName>Courses</relationshipName>
    <type>Lookup</type>
</CustomField>