src/core-crm/objects/hed__Course__c/fields/Professional_Advantage_Value__c.field-meta.xml
<CustomField>
    <fullName>Professional_Advantage_Value__c</fullName>
    <label>Professional Advantage Value ($)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>