src/core-crm/objects/hed__Course__c/fields/Proposal_Description__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Description__c</fullName>
    <label>Proposal Description</label>
    <type>TextArea</type>
</CustomField>