src/core-crm/objects/hed__Course__c/fields/Proposal_Title__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Title__c</fullName>
    <label>Proposal Title</label>
    <type>TextArea</type>
</CustomField>