src/core-crm/objects/hed__Course__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <description>From Courseloop. Provides guidance on who needs to be assigned to a Course Offering as a facilitator.</description>
    <label>Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QUT</fullName>
            </value>
            <value>
                <fullName>QUT and Third Party</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>