src/core-crm/objects/hed__Course__c/fields/Recordtype_Name__c.field-meta.xml
<CustomField>
    <fullName>Recordtype_Name__c</fullName>
    <description>Name value of the record type</description>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recordtype Name</label>
    <type>Text</type>
</CustomField>