src/core-crm/objects/hed__Course__c/fields/Resource_Details__c.field-meta.xml
<CustomField>
    <fullName>Resource_Details__c</fullName>
    <label>Resource Details</label>
    <length>75000</length>
    <type>LongTextArea</type>
</CustomField>