src/core-crm/objects/hed__Course__c/fields/Resource_Detailsv2__c.field-meta.xml
<CustomField>
    <fullName>Resource_Detailsv2__c</fullName>
    <label>Resource Details</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>