src/core-crm/objects/hed__Course__c/fields/Resources_Required__c.field-meta.xml
<CustomField>
    <fullName>Resources_Required__c</fullName>
    <inlineHelpText>This includes prescribed texts, recommended texts and/or reference books Enrolment Rules (if required)</inlineHelpText>
    <label>Resources Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>