src/core-crm/objects/hed__Course__c/fields/Risk_and_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Risk_and_Opportunities__c</fullName>
    <label>Risk and Opportunities</label>
    <type>TextArea</type>
</CustomField>