src/core-crm/objects/hed__Course__c/fields/Search_Engine__c.field-meta.xml
<CustomField>
    <fullName>Search_Engine__c</fullName>
    <inlineHelpText>The search engine description is 1 – 2 Sentences long (180 character limit) that provides just enough information for readers to be able to accurately identify the module and its focus.</inlineHelpText>
    <label>Search Engine description</label>
    <type>TextArea</type>
</CustomField>