src/core-crm/objects/hed__Course__c/fields/Search_Terms__c.field-meta.xml
<CustomField>
    <fullName>Search_Terms__c</fullName>
    <inlineHelpText>Provide individual key words or short phrases that cover the module’s key concepts</inlineHelpText>
    <label>Search Terms</label>
    <length>20</length>
    <type>Text</type>
</CustomField>