src/core-crm/objects/hed__Course__c/fields/Self_Rater_Tools__c.field-meta.xml
<CustomField>
    <fullName>Self_Rater_Tools__c</fullName>
    <label>Self-Rater Tools</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disc Workplace Profile</fullName>
            </value>
            <value>
                <fullName>Disc Sales Profile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>