src/core-crm/objects/hed__Course__c/fields/Top_Left_Signature_Text__c.field-meta.xml
<CustomField>
    <fullName>Top_Left_Signature_Text__c</fullName>
    <label>Top Left Signature Text</label>
    <length>20</length>
    <type>Text</type>
</CustomField>