src/core-crm/objects/hed__Course__c/fields/Type_of_Individual_Coaching__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Individual_Coaching__c</fullName>
    <label>Type of Individual Coaching</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Diagnostic Tool Debrief</fullName>
            </value>
            <value>
                <fullName>Triads</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>