src/core-crm/objects/hed__Course__c/fields/Unit_Category__c.field-meta.xml
<CustomField>
    <fullName>Unit_Category__c</fullName>
    <label>Unit Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Undergraduate Unit</fullName>
            </value>
            <value>
                <fullName>Undergraduate Honours Unit</fullName>
            </value>
            <value>
                <fullName>Post Graduate Unit</fullName>
            </value>
            <value>
                <fullName>QUTIC Unit</fullName>
            </value>
            <value>
                <fullName>HDR (Time Based) Unit</fullName>
            </value>
            <value>
                <fullName>Administrative Unit</fullName>
            </value>
            <value>
                <fullName>Other Unit Type</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>