src/core-crm/objects/hed__Course__c/fields/Unit_Mode__c.field-meta.xml
<CustomField>
    <fullName>Unit_Mode__c</fullName>
    <label>Unit Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>Block</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>