src/core-crm/objects/hed__Course__c/fields/Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Unit_Type__c</fullName>
    <label>Unit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unit</fullName>
            </value>
            <value>
                <fullName>Non-Assessable Unit</fullName>
            </value>
            <value>
                <fullName>Aliance Unit</fullName>
            </value>
            <value>
                <fullName>Thesis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>