src/core-crm/objects/hed__Course__c/fields/Volume_of_Learning_hours__c.field-meta.xml
<CustomField>
    <fullName>Volume_of_Learning_hours__c</fullName>
    <label>Volume of Learning (hours)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>