src/core-crm/objects/hed__Course__c/fields/Volume_of_time__c.field-meta.xml
<CustomField>
    <fullName>Volume_of_time__c</fullName>
    <label>Volume of time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Minutes</fullName>
            </value>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Days</fullName>
            </value>
            <value>
                <fullName>Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>