src/core-crm/objects/hed__Course__c/fields/Who_Should_Participate__c.field-meta.xml
<CustomField>
    <fullName>Who_Should_Participate__c</fullName>
    <description>From Courseloop - can&apos;t be overwritten for Curriculum record types</description>
    <inlineHelpText>Who should participate? By attending participants will gain what new knowledge and skills</inlineHelpText>
    <label>Who Should Participate?</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>