src/core-crm/objects/hed__Course__c/recordTypes/Activity.recordType-meta.xml
<RecordType>
    <fullName>Activity</fullName>
    <active>true</active>
    <label>Activity</label>
    <picklistValues>
        <!-- Renamed from Collaboation_External__c-->
        <picklist>Collaboration_with_External_Organisation__c</picklist>
        <values>
            <fullName>No</fullName>
        </values>
        <values>
            <fullName>Yes</fullName>
        </values>
    </picklistValues>
</RecordType>