src/core-crm/objects/hed__Course__c/recordTypes/Award_Unit.recordType-meta.xml
<RecordType>
    <fullName>Award_Unit</fullName>
    <active>true</active>
    <label>Award Unit</label>
   <picklistValues>
        <!-- Renamed from Collaboation_External__c-->
        <picklist>Collaboration_with_External_Organisation__c</picklist>
        <values>
            <fullName>No</fullName>
        </values>
        <values>
            <fullName>Yes</fullName>
        </values>
    </picklistValues>
</RecordType>