src/core-crm/objects/hed__Course__c/recordTypes/Diagnostic_Tool.recordType-meta.xml
<RecordType>
    <fullName>Diagnostic_Tool</fullName>
    <active>true</active>
    <label>Diagnostic Tool</label>
</RecordType>