src/core-crm/objects/hed__Course__c/recordTypes/Educational_Consultancy.recordType-meta.xml
<RecordType>
    <fullName>Educational_Consultancy</fullName>
    <active>true</active>
    <label>Educational Consultancy</label>
</RecordType>