src/core-crm/objects/hed__Course__c/recordTypes/Group_Coaching.recordType-meta.xml
<RecordType>
    <fullName>Group_Coaching</fullName>
    <active>true</active>
    <label>Group Coaching</label>
    <picklistValues>
    <!-- Renamed from Collaboation_External__c-->
    <picklist>Collaboration_with_External_Organisation__c</picklist>
        <values>
            <fullName>No</fullName>
        </values>
        <values>
            <fullName>Yes</fullName>
        </values>
    </picklistValues>
</RecordType>