src/core-crm/objects/hed__Course__c/recordTypes/Individual_Coaching.recordType-meta.xml
<RecordType>
    <fullName>Individual_Coaching</fullName>
    <active>true</active>
    <label>Individual Coaching</label>
</RecordType>