src/core-crm/objects/hed__Course__c/recordTypes/Module.recordType-meta.xml
<RecordType>
    <fullName>Module</fullName>
    <active>true</active>
    <description>This record type will be used to create a Non-Award Unit or a Short Course with a learning pathway.</description>
    <label>Module</label>
   <picklistValues>
       <!-- Renamed from Collaboation_External__c-->
       <picklist>Collaboration_with_External_Organisation__c</picklist>
        <values>
            <fullName>No</fullName>
        </values>
        <values>
            <fullName>Yes</fullName>
        </values>
    </picklistValues>
</RecordType>