src/core-crm/objects/hed__Course__c/recordTypes/Non_Award_Module.recordType-meta.xml
<RecordType>
    <fullName>Non_Award_Module</fullName>
    <active>true</active>
    <label>Non Award Module</label>
    <picklistValues>
       <!-- Renamed from Collaboation_External__c-->
       <picklist>Collaboration_with_External_Organisation__c</picklist>
        <values>
            <fullName>No</fullName>
        </values>
        <values>
            <fullName>Yes</fullName>
        </values>
    </picklistValues>
</RecordType>