src/core-crm/objects/hed__Course__c/recordTypes/Short_Course.recordType-meta.xml
<RecordType>
    <fullName>Short_Course</fullName>
    <active>true</active>
    <label>Short Course</label>
</RecordType>