src/core-crm/objects/hed__Course__c/recordTypes/Single_Product.recordType-meta.xml
<RecordType>
    <fullName>Single_Product</fullName>
    <active>true</active>
    <label>Single Product</label>
</RecordType>