src/core-crm/objects/hed__Course__c/validationRules/Activity_Outcomes_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Activity_Outcomes_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
 OR(
  RecordType.DeveloperName = &apos;OPE_Activity&apos;,
  RecordType.DeveloperName = &apos;Short_Course&apos;,
  RecordType.DeveloperName = &apos;Single_Product&apos;  
 ), 
 OR(
  ISPICKVAL( ProductRequestID__r.Product_Request_Status__c, &apos;Design&apos;),
  ISPICKVAL( ProductRequestID__r.Product_Request_Status__c, &apos;Release&apos;),
  ISPICKVAL( ProductRequestID__r.Product_Request_Status__c, &apos;In Delivery&apos;),
  ISPICKVAL( ProductRequestID__r.Product_Request_Status__c, &apos;Completed&apos;)
 ),
 ISBLANK( Activity_Outcomes__c )
)</errorConditionFormula>
    <errorDisplayField>Activity_Outcomes__c</errorDisplayField>
    <errorMessage>“Activity Outcomes” is required to update the Product Request Status.</errorMessage>
</ValidationRule>