src/core-crm/objects/hed__Course__c/validationRules/Actual_Volume_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Actual_Volume_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
 OR(
  RecordType.DeveloperName = &apos;Short_Course&apos;,
  RecordType.DeveloperName = &apos;Single_Product&apos;  
 ),  
 OR(
  ISPICKVAL( ProductRequestID__r.Product_Request_Status__c, &apos;Design&apos;),
  ISPICKVAL( ProductRequestID__r.Product_Request_Status__c, &apos;Release&apos;),
  ISPICKVAL( ProductRequestID__r.Product_Request_Status__c, &apos;In Delivery&apos;),
  ISPICKVAL( ProductRequestID__r.Product_Request_Status__c, &apos;Completed&apos;)
 ),
 ISBLANK( Actual_Volume__c )
)</errorConditionFormula>
    <errorDisplayField>Actual_Volume__c</errorDisplayField>
    <errorMessage>“Actual Volume” is required to update the Product Request Status.</errorMessage>
</ValidationRule>