src/core-crm/objects/hed__Course__c/validationRules/Certificate_Type_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Certificate_Type_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
 OR(
  RecordType.DeveloperName = &apos;OPE_Activity&apos;,
  RecordType.DeveloperName = &apos;Short_Course&apos;
 ),
 OR(
  ISPICKVAL( ProductRequestID__r.Product_Request_Status__c, &apos;Design&apos;),
  ISPICKVAL( ProductRequestID__r.Product_Request_Status__c, &apos;Release&apos;),
  ISPICKVAL( ProductRequestID__r.Product_Request_Status__c, &apos;In Delivery&apos;),
  ISPICKVAL( ProductRequestID__r.Product_Request_Status__c, &apos;Completed&apos;)
 ),
 ISBLANK( TEXT ( Certificate_Type__c ) )
)</errorConditionFormula>
    <errorDisplayField>Certificate_Type__c</errorDisplayField>
    <errorMessage>“Certificate Type” is required to update the Product Request Status.</errorMessage>
</ValidationRule>