src/core-crm/objects/hed__Course__c/validationRules/Coach_Type_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Coach_Type_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
  OR(
   RecordType.DeveloperName = &apos;Individual_Coaching&apos;,
   RecordType.DeveloperName = &apos;Group_Coaching&apos;
  ), 
 ISPICKVAL( ProductRequestID__r.Product_Request_Status__c , &apos;Design&apos;),
 ISBLANK( TEXT( Coach_Type__c )),
 Mark_Design_Stage_as_Complete__c = true
)</errorConditionFormula>
    <errorDisplayField>Coach_Type__c</errorDisplayField>
    <errorMessage>“Coach Type” is required to update the Product Request Status.</errorMessage>
</ValidationRule>