src/core-crm/objects/hed__Course__c/validationRules/Collab_with_Ext_Org_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Collab_with_Ext_Org_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
 OR(
  RecordType.DeveloperName = &apos;OPE_Activity&apos;,
  RecordType.DeveloperName = &apos;Short_Course&apos;  
 ), 
 OR(
  ISPICKVAL( ProductRequestID__r.Product_Request_Status__c, &apos;Design&apos;),
  ISPICKVAL( ProductRequestID__r.Product_Request_Status__c, &apos;Release&apos;),
  ISPICKVAL( ProductRequestID__r.Product_Request_Status__c, &apos;In Delivery&apos;),
  ISPICKVAL( ProductRequestID__r.Product_Request_Status__c, &apos;Completed&apos;)
 ),
 ISBLANK( TEXT ( Collaboation_External__c ) )
)</errorConditionFormula>
    <errorDisplayField>Collaboation_External__c</errorDisplayField>
    <errorMessage>“Collaboration with External Organisation” is required to update the Product Request Status.</errorMessage>
</ValidationRule>