src/core-crm/objects/hed__Course__c/validationRules/Contentv2_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Contentv2_is_required</fullName>
    <active>false</active>
    <errorConditionFormula>AND (
 OR(
  RecordType.DeveloperName = &apos;Activity&apos;,
  RecordType.DeveloperName = &apos;Short_Course&apos;,
  RecordType.DeveloperName = &apos;Unit&apos;,
  RecordType.DeveloperName = &apos;Module&apos;
 ),
 ISPICKVAL( ProductRequestID__r.Product_Request_Status__c , &apos;Design&apos;),
 ISBLANK( Contentv2__c ),
 Mark_Design_Stage_as_Complete__c = true
)</errorConditionFormula>
    <errorDisplayField>Contentv2__c</errorDisplayField>
    <errorMessage>“Content” is required to update the Product Request Status.</errorMessage>
</ValidationRule>